Enhanced user leaving, polished bootstrap cleanup task, and ensured consistency with enforcing vectorclock being non null in messages